# Agents

./: .gitignore  README.md
.github/workflows/: code-comment-bot.yml  code-comment-review.yml  code-review-extension.yml  code-reviewer.yml  (+1 more)
auto-code-commenter/: .gitignore
code-comment-review-agent/: Dockerfile  action.yml  ai-comment-reviewer.yaml  code_comment_review_result.json  code_review_result.json  env.example  pyproject.toml  run_code_review.sh
code-review-agent/: .dockerignore  .env.example  .secrets.example  Dockerfile  Makefile  README.md  action.yml  ai-reviewer.yaml  code_review_result.json  main.py  pyproject.toml  requirements.txt
code-review-agent/agents/: review-agent.py  review_agent.py
code-review-agent/core/: models.py  models_bedrock.py  models_custom.py  models_deepseek.py  models_huggingface.py  models_openai.py
code-review-agent/ex-configs/: bedrock-llama-config.yaml  bedrock-mistral-config.yaml  bedrock-titan-config.yaml  deepseek-config.yaml  hf-deepseek-qwen-1_5.yaml  hf-deepseek-qwen-8b-config.yaml  hf-gemma3-config.yaml  hf-phi4-config.yaml  openai.yaml
code-review-agent/src/: fast_api_server.py  main.py
code-review-agent/src/agents/: review_agent.py
code-review-agent/src/core/: models.py  models_bedrock.py  models_huggingface.py
code-review-agent/utils/: config_loader.py  file_loader.py
issue-agent/: .dockerignore  .env.example  Dockerfile  Makefile  action.yml  config.yaml  issuer-example-config.yaml  pyproject.toml  requirements.txt
issue-agent/data/: code_comment_review_result.json  code_review_result.json  sonar.json
issue-agent/src/: cli.py  main.py  main2.py  test_comment.py
issue-agent/src/agents/: generator_agent.py  reviewer_agent.py  suggestion_agent.py
issue-agent/src/core/: config.py  models.py
issue-agent/src/graph/: graph_builder.py  langgraph_runner.py
issue-agent/src/nodes/: reviewer_node.py
issue-agent/src/tools/: codebase_fetcher.py  github.py  github_issues.py  issue_creator.py  parser.py  sonar_metrics.py
issue-agent/src/utils/: config_loader.py  github.py  graph_image.py  parser.py  tools.py
(+24 files in other folders)
