[project]
name = "code-review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[all]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.24",
    "langchain-openai>=0.3.18",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
