[project]
name = "issue-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "ipython>=9.3.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "nest-asyncio>=1.6.0",
    "pygithub>=2.6.1",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.1.0",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
